k8s-deploy-dev/monster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monster-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: monsterstack.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: monstericon
              port:
                number: 5000
